--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+:root {
+    --header-bg: #10375c;
+    --primary-color: #2e80ce;
+}
+
 html {
     font-size: 62.5%;
     font-family: "Sora", sans-serif;
@@ -11,4 +16,71 @@ html {
 
 body {
     font-size: 1.6rem;
+}
+
+/* Common */
+
+.container {
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+/* Header */
+
+header {
+    min-height: 100vh;
+    background: var(--header-bg);
+}
+
+.logo__circle::before,
+.logo__circle::after {
+    content: "";
+    display: inline-block;
+}
+
+.logo {
+    font-size: 1em;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+}
+
+.logo__circle::before {
+    width: 3em;
+    height: 3em;
+    border-radius: 50%;
+    background: var(--primary-color);
+}
+
+.logo__circle::after {
+    position: absolute;
+    width: 1.6em;
+    height: 1.6em;
+    top: 1.1em;
+    left: 1.1em;
+    background: #fff;
+    border-radius: 50%;
+}
+
+.logo__text {
+    margin-left: 6px;
+    color: #fff;
+    text-align: right;
+}
+
+.logo__branch {
+    font-size: 1.8em;
+    font-weight: 400;
+    line-height: 1.4em;
+    display: block;
+}
+
+.logo__branch--small {
+    font-size: 1.4em;
+    font-weight: 300;
 }
