--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -305,3 +305,102 @@ header {
     line-height: 1.75;
     color: #575f66;
 }
+
+/* Work */
+
+.work {
+    padding: 100px 0;
+    margin-bottom: 70px;
+    background: #f7fbff;
+}
+
+.work-desc {
+    margin-top: 18px;
+    width: 468px;
+    line-height: 1.67;
+}
+
+.work-list {
+    margin-top: 86px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+}
+
+.work-item {
+    padding: 43px 42px;
+    border: 16px solid #eaf6ff;
+    border-radius: 4px;
+    transition: 0.25s;
+}
+
+.work-item:hover {
+    transform: translateY(-16px);
+    border-color: #2e80ce;
+}
+
+.work__heading {
+    margin-top: 20px;
+    font-weight: 600;
+    font-size: 2.6rem;
+    line-height: 1.38;
+    color: #10375c;
+}
+
+.work-item__desc {
+    margin-top: 28px;
+    font-weight: 300;
+    line-height: 1.75;
+    color: #575f66;
+}
+
+.work__cta {
+    display: block;
+    margin-top: 18px;
+    color: #2e80ce;
+}
+
+/* features */
+
+.features {
+    padding: 100px 0;
+}
+
+.features-body {
+    display: flex;
+    align-items: center;
+    column-gap: 130px;
+}
+
+.features-media {
+    width: 48%;
+    position: relative;
+    padding-bottom: 121px;
+    padding-right: 58px;
+}
+
+.media-img:first-child {
+    width: 512px;
+    height: 370px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.media-img:last-child {
+    position: absolute;
+    width: 332px;
+    height: 370px;
+    right: 0;
+    bottom: 0;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.features-info__desc {
+    margin-top: 18px;
+}
+
+.features-btn {
+    margin-top: 38px;
+    color: var(--second-color);
+}
