--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -309,7 +309,7 @@ header {
 /* Work */
 
 .work {
-    padding: 100px 0;
+    padding: 85px 0;
     margin-bottom: 70px;
     background: #f7fbff;
 }
@@ -363,7 +363,7 @@ header {
 /* features */
 
 .features {
-    padding: 100px 0;
+    padding: 85px 0;
 }
 
 .features-body {
@@ -403,4 +403,49 @@ header {
 .features-btn {
     margin-top: 38px;
     color: var(--second-color);
+}
+
+/* Member */
+.member {
+    padding: 85px 0;
+}
+
+.member-heading {
+    text-align: center;
+}
+
+.member-cta {
+    margin-top: 38px;
+    color: #ffffff;
+}
+
+.member-list {
+    display: grid;
+    margin-top: 70px;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 30px;
+}
+
+.member__item--thumb {
+    padding-top: 28px;
+    background: #eaf6ff;
+    border-radius: 6px;
+}
+
+.member-addr,
+.member-name {
+    text-align: center;
+}
+
+.member-name {
+    font-weight: 400;
+    line-height: 1.75;
+    color: #10375c;
+}
+
+.member-addr {
+    font-weight: 300;
+    font-size: 1.4rem;
+    line-height: 1.86;
+    color: #575f66;
 }
