--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -545,3 +545,227 @@ header {
 .app__btn:hover {
     transform: scale(1.1, 1.1);
 }
+
+/* News */
+
+.new {
+    padding: 85px 0;
+}
+
+.new__body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.new__events {
+    margin-right: 130px;
+}
+
+.new__blog {
+    display: block;
+    margin-top: 28px;
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1.56;
+    text-decoration-line: underline;
+    color: #10375c;
+}
+
+.new__blog:hover {
+    color: #2e80ce;
+    cursor: pointer;
+}
+
+.new__cta {
+    display: flex;
+    margin-top: 28px;
+    gap: 18px;
+}
+
+.new__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 30px;
+}
+
+.new__item {
+    width: 270px;
+    border: 1px solid #e8ebee;
+    border-radius: 12px;
+}
+
+.new__item--thumb {
+    width: 100%;
+    height: 172px;
+    border-radius: 12px 12px 0px 0px;
+    object-fit: cover;
+}
+
+.new__item--body {
+    padding: 18px 22px 22px 22px;
+}
+
+.new__item--title {
+    font-weight: 600;
+    line-height: 1.62;
+    color: #10375c;
+}
+
+.new__item--desc {
+    margin-top: 10px;
+    font-weight: 300;
+    font-size: 1.4rem;
+    line-height: 1.71;
+    color: #575f66;
+}
+
+.new__item--move {
+    display: block;
+    margin-top: 12px;
+    font-size: 14px;
+    color: #10375c;
+}
+
+.new__item--move:hover {
+    color: #2e80ce;
+    cursor: pointer;
+}
+
+/* Welcome */
+.welcome {
+    margin-top: 85px;
+    padding-bottom: 100px;
+}
+
+.welcome__heading {
+    padding-top: 100px;
+    padding-bottom: 38px;
+    text-align: center;
+}
+
+.welcome__heading::after {
+    content: "";
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 18px;
+    width: 136px;
+    height: 2px;
+    background: #2e80ce;
+}
+
+.welcome__desc {
+    width: 617px;
+    font-weight: 300;
+    line-height: 1.75;
+    text-align: center;
+    color: #575f66;
+    margin: 0 auto;
+}
+
+.welcome__cta {
+    margin-top: 38px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.welcome__btn {
+    color: #ffffff;
+}
+
+/* Footer */
+footer {
+    margin-top: 170px;
+    background: #10375c;
+    padding-bottom: 42px;
+}
+
+.footer__list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 78px;
+    padding-top: 100px;
+}
+
+.footer__logo--desc {
+    margin-top: 21px;
+    width: 336px;
+    font-weight: 400;
+    line-height: 1.75;
+    color: #a9b3bb;
+}
+
+.footer__title {
+    margin-bottom: 20px;
+    font-weight: 600;
+    line-height: 1.75;
+    color: #ffffff;
+}
+
+.footer__desc {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 14px;
+    line-height: 1.86;
+    color: #a9b3bb;
+}
+
+.footer__item h3:last-of-type {
+    margin-top: 28px;
+}
+
+.footer__social img {
+    margin-right: 10px;
+}
+
+.footer__item:last-child p {
+    width: 273px;
+}
+
+.mail {
+    width: 212px;
+    height: 46px;
+    background: none;
+    border: 1px solid #406181;
+    border-radius: 4px;
+}
+
+.mail::placeholder {
+    padding: 10px;
+}
+
+.footer__cta {
+    display: flex;
+    gap: 12px;
+}
+
+.footer__cta--btn {
+    width: 108px;
+    height: 46px;
+    background: #2e80ce;
+    border-radius: 4px;
+    border: none;
+    font-weight: 600;
+    font-size: 1.4rem;
+}
+
+.footer__link {
+    color: #fff;
+}
+
+.seperator {
+    content: "";
+    display: block;
+    margin-top: 28px;
+    width: 1170px;
+    height: 1px;
+    background: #406181;
+}
+
+.copyright {
+    display: block;
+    margin-top: 28px;
+    text-align: center;
+}
