--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -734,6 +734,9 @@ footer {
 
 .mail::placeholder {
     padding: 10px;
+    font-weight: 400;
+    font-size: 1.4rem;
+    color: #9ca8b1;
 }
 
 .footer__cta {
